<resources>
    <string name="app_name">DatabaseApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="comics">ComicsDB</string>
    <string name="insert">Insert</string>
    <string name="choose_a_table">Choose a table</string>
    <string name="tables">Tables</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="tables_to_search">Tables to search</string>
    <string name="search">Search…</string>
    <string name="queries">Queries</string>
    <string name="insert_delete">Insert/Delete</string>
</resources>
