<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20sp"
    android:layout_marginStart="20sp"
    android:layout_marginRight="20sp"
    android:layout_marginEnd="20sp">

    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:hint="@string/search"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button_advanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/advanced_options" />

    <TextView
        android:id="@+id/tables_advanced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/tables_to_search"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/tables_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20sp"/>

</LinearLayout>