<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TabHost
        android:id="@+id/tab_host"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/insert_tab"
                    android:text="@string/insert"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/choose_table_insert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_a_table" />

                    <Spinner
                        android:id="@+id/tables_menu_insert"
                        android:text="@string/tables"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/submit_insert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit" />

                    <ListView
                        android:id="@+id/elements_to_insert"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/delete_tab"
                    android:text="@string/delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/choose_table_delete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_a_table" />

                    <Spinner
                        android:id="@+id/tables_menu_delete"
                        android:text="@string/tables"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/submit_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit" />

                    <ListView
                        android:id="@+id/elements_to_delete"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>